Fjerner enum som ble bare brukt for gamle historikkinnslagbygging og dens bruk i eksisterende historikkinnslag